# sabnzb-cli

./: .gitignore  README.md  config.example.json  install.sh  pyproject.toml
src/sabnzb_cli/: __init__.py  cli.py  client.py  config.py  dashboard.py  format.py  interactive.py
